--- a/MDCurrent.conf
+++ b/MDCurrent.conf
@@ -1,197 +1,203 @@
-#[Master Duel 04.08.2025]
-!Master Duel 04.08.2025
+#[MD 05.02.2026]
+!MD 05.02.2026
 #Forbidden MD
-21044178 0 --Abyss Dweller
-20292186 0 --Artifact Scythe
-91869203 0 --Amazoness Archer
-73356503 0 --Barrier Statue of the Stormwinds
-43262273 0 --Appointer of the Red Lotus
-27552504 0 --Beatrice, Lady of the Eternal
-57953380 0 --Card of Safe Return
-14702066 0 --Cannon Soldier MK-2
-11384280 0 --Cannon Soldier
-69243953 0 --Butterfly Dagger - Elma
-17375316 0 --Confiscation
-50588353 0 --Crystron Halqifibrax
+1041278 0 --Branded Expulsion
+1845204 0 --Instant Fusion
+3040496 0 --Chaos Ruler, the Chaotic Magical Dragon
+4280258 0 --Apollousa, Bow of the Goddess
+5851097 0 --Vanity's Emptiness
+6798031 0 --Ryzeal Cross
+8903700 0 --Djinn Releaser of Rituals
 9929398 0 --Blackwing - Gofu the Vague Shadow
+10158145 0 --Knightmare Corruptor Iblee
+14702066 0 --Cannon Soldier MK-2
+15341821 0 --Dandylion
+16923472 0 --Wind-Up Hunter
+17178486 0 --Life Equalizer
+17412721 0 --Elder Entity Norden
+20292186 0 --Artifact Scythe
+20663556 0 --Substitoad
+21044178 0 --Abyss Dweller
+22593417 0 --Topologic Gumblar Dragon
+23516703 0 --Summon Limit
+23557835 0 --Dimension Fusion
+23558733 0 --Phoenixian Cluster Amaryllis
+25926710 0 --Kelbek the Ancient Vanguard
+27174286 0 --Return from the Different Dimension
+27552504 0 --Beatrice, Lady of the Eternal
+28566710 0 --Last Turn
+31423101 0 --Divine Sword - Phoenix Blade
+32723153 0 --Magical Explosion
+34086406 0 --Lavalval Chain
+34206604 0 --Magical Scientist
+34906152 0 --Mass Driver
+34945480 0 --Outer Entity Azathot
+35059553 0 --Kaiser Colosseum
+35772782 0 --Number 67: Pair-a-Dice Smasher
+35984222 0 --Ido the Supreme Magical Force
+38273745 0 --Evilswarm Ouroboros
+41482598 0 --Mirage of Nightmare
+41855169 0 --Jowgen the Spiritualist
+42829885 0 --The Forceful Sentry
+43262273 0 --Appointer of the Red Lotus
+44763025 0 --Delinquent Duo
+45663742 0 --Snake-Eye Oak
+46411259 0 --Metamorphosis
+50588353 0 --Crystron Halqifibrax
+51858306 0 --Eclipse Wyvern
+52653092 0 --Number S0: Utopic ZEXAL
+54447022 0 --Soul Charge
+54719828 0 --Number 16: Shock Master
+55204071 0 --Gimmick Puppet Nightmare
+57421866 0 --Level Eater
+57585212 0 --Self-Destruct Button
+57953380 0 --Card of Safe Return
+58820923 0 --Number 95: Galaxy-Eyes Dark Matter Dragon
+58921041 0 --Anti-Spell Fragrance
+59509952 0 --Archlord Kristya
+59537380 0 --Guardragon Agarpain
 59750328 0 --Card of Demise
 60682203 0 --Cold Wave
-95727991 0 --Catapult Turtle
-3040496 0 --Chaos Ruler, the Chaotic Magical Dragon
-15341821 0 --Dandylion
-69015963 0 --Cyber-Stein
-44763025 0 --Delinquent Duo
-8903700 0 --Djinn Releaser of Rituals
-23557835 0 --Dimension Fusion
-31423101 0 --Divine Sword - Phoenix Blade
-51858306 0 --Eclipse Wyvern
-17412721 0 --Elder Entity Norden
-93369354 0 --Fishborg Blaster
-78706415 0 --Fiber Jar
-67441435 0 --Glow-Up Bulb
-55204071 0 --Gimmick Puppet Nightmare
-42703248 0 --Giant Trunade
-35984222 0 --Ido the Supreme Magical Force
-59537380 0 --Guardragon Agarpain
-79571449 0 --Graceful Charity
 62242678 0 --Hot Red Dragon Archfiend King Calamity
-86148577 0 --Guardragon Elpy
+62320425 0 --Agido the Ancient Sentinel
+63101939 0 --Tempest Magician
+63504681 0 --Number 86: Heroic Champion - Rhongomyniad
+63789924 0 --Smoke Grenade of the Thief
+64697231 0 --Trap Dustshoot
+68059897 0 --Maliss ＜Q＞ Red Ransom
+68462976 0 --Secret Village of the Spellcasters
+69015963 0 --Cyber-Stein
+69243953 0 --Butterfly Dagger - Elma
+70828912 0 --Premature Burial
+72537897 0 --Obedience Schooled
+73356503 0 --Barrier Statue of the Stormwinds
+73468603 0 --Set Rotation
+73628505 0 --Terraforming
+74078255 0 --Tearlaments Merrli
+74191942 0 --Painful Choice
 75732622 0 --Grinder Golem
-1845204 0 --Instant Fusion
-61740673 0 --Imperial Order
-35059553 0 --Kaiser Colosseum
-41855169 0 --Jowgen the Spiritualist
-32723153 0 --Magical Explosion
-34206604 0 --Magical Scientist
-17178486 0 --Life Equalizer
+76375976 0 --Mystic Mine
+77103950 0 --Primeval Planet Perlereino
+77679716 0 --Superheavy Samurai Soulbreaker Armor
+79875176 0 --Toon Cannon Soldier
+80237445 0 --Artifact Mjollnir
+83152502 0 --Union Carrier
+84211599 0 --Pot of Prosperity
+85115440 0 --Zoodiac Broadbull
 85243784 0 --Linkross
 85602018 0 --Last Will
-10158145 0 --Knightmare Corruptor Iblee
-57421866 0 --Level Eater
-28566710 0 --Last Turn
-34086406 0 --Lavalval Chain
-41482598 0 --Mirage of Nightmare
-76375976 0 --Mystic Mine
-34906152 0 --Mass Driver
-46411259 0 --Metamorphosis
-54719828 0 --Number 16: Shock Master
-96782886 0 --Mind Master
-52653092 0 --Number S0: Utopic ZEXAL
-35772782 0 --Number 67: Pair-a-Dice Smasher
-63504681 0 --Number 86: Heroic Champion - Rhongomyniad
-95474755 0 --Number 89: Diablosis the Mind Hacker
-34945480 0 --Outer Entity Azathot
-74191942 0 --Painful Choice
-55144522 0 --Pot of Greed
-58820923 0 --Number 95: Galaxy-Eyes Dark Matter Dragon
-84211599 0 --Pot of Prosperity
-70828912 0 --Premature Burial
-90884403 0 --Phantasmal Lord Ultimitl Bishbaalkin
-23558733 0 --Phoenixian Cluster Amaryllis
-27174286 0 --Return from the Different Dimension
-73468603 0 --Set Rotation
-93016201 0 --Royal Oppression
-3280747 0 --Sixth Sense
-68462976 0 --Secret Village of the Spellcasters
-57585212 0 --Self-Destruct Button
-54447022 0 --Soul Charge
-63789924 0 --Smoke Grenade of the Thief
-45663742 0 --Snake-Eye Oak
-20663556 0 --Substitoad
-73628505 0 --Terraforming
-63101919 0 --Tempest Magician
-77679716 0 --Superheavy Samurai Soulbreaker Armor
-42829885 0 --The Forceful Sentry
-23516703 0 --Summon Limit
-22593417 0 --Topologic Gumblar Dragon
-88581108 0 --True King of All Calamities
-64697231 0 --Trap Dustshoot
-35316708 0 --Time Seal
+86148577 0 --Guardragon Elpy
 88071625 0 --The Tyrant Neptune
-79875176 0 --Toon Cannon Soldier
+88581108 0 --True King of All Calamities
+90590303 0 --Number 41: Bagooska the Terribly Tired Tapir
 90809975 0 --Toadally Awesome
-83152482 0 --Union Carrier
-80604091 0 --Ultimate Offering
-5851097 0 --Vanity's Emptiness
-80604092 0 --Ultimate Offering
-16923472 0 --Wind-Up Hunter
-85115440 0 --Zoodiac Broadbull
-1041278 0 --Branded Expulsion
-77103950 0 --Primeval Planet Perlereino
-74078255 0 --Tearlaments Merrli
-25926710 0 --Kelbek the Ancient Vanguard
-62320425 0 --Agido the Ancient Sentinel
+91869203 0 --Amazoness Archer
+93016201 0 --Royal Oppression
+93369354 0 --Fishborg Blaster
+95474755 0 --Number 89: Diablosis the Mind Hacker
+96782886 0 --Mind Master
+120102009 0 --Confiscation
+120181003 0 --Pot of Greed
+120196041 0 --Cannon Soldier
+120196049 0 --Graceful Charity
+120271075 0 --Giant Trunade
+120272064 0 --Sixth Sense
+511000020 0 --Fiber Jar
+511000228 0 --Catapult Turtle
+511001952 0 --Phantasmal Lord Ultimitl Bishbaalkin
+511002996 0 --Imperial Order
+511003023 0 --Ultimate Offering
 #Limited MD
-32181268 1 --Amano-Iwato
-58921041 1 --Anti-Spell Fragrance
-7394770 1 --Brilliant Fusion
-72892473 1 --Card Destruction
-6602300 1 --Blaze Fenix, the Burning Bombardment Bird
-94689206 1 --Block Dragon
-65681983 1 --Crossout Designator
-91800273 1 --Dimension Shifter
-81439174 1 --Foolish Burial
-33396948 1 --Exodia the Forbidden One
-81439173 1 --Foolish Burial
-35726888 1 --Foolish Burial Goods
-55623480 1 --Fairy Tail - Snow
-42009836 1 --Fossil Dyna Pachycephalo
-18144506 1 --Harpie's Feather Duster
-19613556 1 --Heavy Storm
-24094258 1 --Heavymetalfoes Electrumite
-18144507 1 --Harpie's Feather Duster
-74169516 1 --Golem that Guards the Millennium Treasures
-53334471 1 --Gozen Match
-15397015 1 --Inspector Boarder
-44519536 1 --Left Leg of the Forbidden One
-7902349 1 --Left Arm of the Forbidden One
-83764718 1 --Monster Reborn
-83764719 1 --Monster Reborn
-38814750 1 --PSY-Framegear Gamma
-33782437 1 --One Day of Peace
+1475311 1 --Allure of Darkness
 2295440 1 --One for One
-74586817 1 --PSY-Framelord Omega
-70369116 1 --Predaplant Verte Anaconda
-19619755 1 --Performapal Five-Rainbow Magician
-49238328 1 --Pot of Extravagance
-35261759 1 --Pot of Desires
-98645731 1 --Pot of Duality
+4928565 1 --Tearlaments Kashtira
+6602300 1 --Blaze Fenix, the Burning Bombardment Bird
+7902349 1 --Left Arm of the Forbidden One
 8124921 1 --Right Leg of the Forbidden One
-32807846 1 --Reinforcement of the Army
-90846359 1 --Rivalry of Warlords
-70903634 1 --Right Arm of the Forbidden One
-82732705 1 --Skill Drain
+9674034 1 --Snake-Eye Ash
 11110587 1 --That Grass Looks Greener
-90953320 1 --T.G. Hyper Librarian
-90361010 1 --Superheavy Samurai Soulpiercer
-43387895 1 --Supreme King Dragon Starving Venom
+15397015 1 --Inspector Boarder
+19619755 1 --Performapal Five-Rainbow Magician
+23434538 1 --Maxx "C"
 24207889 1 --There Can Be Only One
-78872731 1 --Zoodiac Ratpier
+24224830 1 --Called by the Grave
 28126717 1 --Floowandereeze and the Magnificent Map
-94445733 1 --Runick Destruction
+30336082 1 --Sangen Summoning
+32061192 1 --Maliss ＜P＞ Dormouse
+32181268 1 --Amano-Iwato
+32807846 1 --Reinforcement of the Army
+32909498 1 --Kashtira Fenrir
+33396948 1 --Exodia the Forbidden One
+33782437 1 --One Day of Peace
+33854624 1 --Bystial Magnamhut
+34022970 1 --Ext Ryzeal
+35261759 1 --Pot of Desires
+35726888 1 --Foolish Burial Goods
+35844557 1 --Sword Ryzeal
+37961969 1 --Tearlaments Havnis
+38814750 1 --PSY-Framegear Gamma
+42009836 1 --Fossil Dyna Pachycephalo
+44519536 1 --Left Leg of the Forbidden One
+49238328 1 --Pot of Extravagance
+52340444 1 --Sky Striker Mecha - Hornet Drones
+53334471 1 --Gozen Match
+55623480 1 --Fairy Tail - Snow
+60306277 1 --Synchro Zone
+63542003 1 --Keldo the Sacred Protector
+65681983 1 --Crossout Designator
+66730191 1 --Sangen Kaimen
+68337209 1 --Maliss in Underground
+69272449 1 --Maliss ＜P＞ White Rabbit
+70369116 1 --Predaplant Verte Anaconda
+70903634 1 --Right Arm of the Forbidden One
+71832012 1 --Pressured Planet Wraitsoth
+74169516 1 --Golem that Guards the Millennium Treasures
+74586817 1 --PSY-Framelord Omega
+74920585 1 --Tearlaments Sulliek
+75500286 1 --Gold Sarcophagus
+78872731 1 --Zoodiac Ratpier
+79606837 1 --Herald of the Arc Light
+80845034 1 --WANTED: Seeker of Sinful Spoils
+81439173 1 --Foolish Burial
+82732705 1 --Skill Drain
+85106525 1 --Bonfire
+89023486 1 --Original Sinful Spoils - Snake-Eye
+90241276 1 --Snake-Eyes Poplar
+90361010 1 --Superheavy Samurai Soulpiercer
+90846359 1 --Rivalry of Warlords
+90953320 1 --T.G. Hyper Librarian
+91800273 1 --Dimension Shifter
+91810826 1 --Tenpai Dragon Chundra
 92107604 1 --Runick Fountain
 92731385 1 --Tearlaments Kitkallos
-37961969 1 --Tearlaments Havnis
-74920585 1 --Tearlaments Sulliek
-33854624 1 --Bystial Magnamhut
-63542003 1 --Keldo the Sacred Protector
-32909498 1 --Kashtira Fenrir
+94445733 1 --Runick Destruction
+96676583 1 --Maliss ＜P＞ Chessy Cat
 99937011 1 --Mudora the Sword Oracle
-55584558 1 --Purrely Delicious Memory
-71832012 1 --Pressured Planet Wraitsoth
-4928565 1 --Tearlaments Kashtira
-60306277 1 --Synchro Zone
-85106525 1 --Bonfire
-80845034 1 --WANTED: Seeker of Sinful Spoils
-89023486 1 --Original Sinful Spoils - Snake-Eye
-9674034 1 --Snake-Eye Ash
-90241276 1 --Snake-Eyes Poplar
-91810826 1 --Tenpai Dragon Chundra
-30336082 1 --Sangen Summoning
-66730191 1 --Sangen Kaimen
+120150048 1 --Card Destruction
+120194004 1 --Monster Reborn
+120229003 1 --Heavy Storm
+120271002 1 --Pot of Duality
+120283052 1 --Harpie's Feather Duster
 #Semi-Limited MD
-24224830 2 --Called by the Grave
-81034083 2 --Dark Beckoning Beast
+572850 2 --Tearlaments Scheiren
 8628798 2 --D.D. Dynamite
-75500286 2 --Gold Sarcophagus
+9091064 2 --Vanquish Soul Jiaolong
+10966439 2 --Marshmao☆Yummy
 14532163 2 --Lightning Storm
-23434538 2 --Maxx "C"
-28297833 2 --Necroface
-71278040 2 --Parallel eXceed
-80312545 2 --Opening of the Spirit Gates
-12580477 2 --Raigeki
+17947697 2 --Maiden of White
 23002292 2 --Red Reboot
-8240199 2 --Sage with Eyes of Blue
+28297833 2 --Necroface
+28642461 2 --K9-66a Jokul
+29302858 2 --Vanquish Soul Razen
+30430448 2 --Runick Freezing Curses
+30581601 2 --Yummy★Snatchy
+31562086 2 --Runick Tip
 41420027 2 --Solemn Judgment
 44362883 2 --Branded Fusion
-37629703 2 --Labrynth Chandraglier
-74018812 2 --Labrynth Stovie Torbie
-67835547 2 --Runick Slumber
-30430448 2 --Runick Freezing Curses
-31562086 2 --Runick Tip
-572850 2 --Tearlaments Scheiren
-68304193 2 --Kashtira Unicorn
-93729896 2 --Nightmare Throne
-80453041 2 --Phantom of Yubel
+54562327 2 --Stake your Soul!
 60764609 2 --Fiendsmith Engraver
-17947697 2 --Maiden of White
+67835547 2 --Runick Slumber
+68304193 2 --Kashtira Unicorn
+71278040 2 --Parallel eXceed
+80453041 2 --Phantom of Yubel
+94145021 2 --Droll & Lock Bird
