Upload Trinity.conf via Website

--- a/Trinity.conf
+++ b/Trinity.conf
@@ -1,24 +1,26 @@
-#[2025.12 Trinity]
-!2025.12 Trinity
+#[2026.2 Trinity]
+!2026.2 Trinity
 #Half-Point Trinity
 25533642 1 --Altergeist Meluseek
 73304257 1 --Alpha, the Master of Beasts
+1225009 1 --Arianna the Labrynth Servant
 72989439 1 --Black Luster Soldier - Envoy of the Beginning
 72656408 1 --Bystial Baldrake
 6637331 1 --Bystial Druiswurm
 4538826 1 --Chaos Emperor, the Dragon of Armageddon
+42125140 1 --Dracotail Shaulas
 35622739 1 --Gem-Knight Quartz
 52126602 1 --Gen the Diamond Tiger
 96305350 1 --Gold Pride - Captain Carrie
 39078434 1 --Infinite Antlion
 71768839 1 --I.A.S. -Invasive Alien Species-
 82041999 1 --Joruri-P.U.N.K. Madame Spider
-92248362 1 --K9-17 Izuna
 25131968 1 --Ken the Warrior Dragon
 46033517 1 --Machina Ruinforce
 31699677 1 --Magikuriboh
 23434538 1 --Maxx "C"
 63198739 1 --Primite Dragon Ether Beryl
+16922142 1 --Radiant Typhoon Krosea
 62318994 1 --Samsara D Lotus
 90829280 1 --Spirit of Yubel
 21727231 1 --Therion "Reaper" Fum
@@ -31,17 +33,24 @@
 46772449 1 --Evilswarm Exciton Knight
 65741786 1 --I:P Masquerena
 65741787 1 --I:P Masquerena
+65741789 1 --I:P Masquerena
 78693036 1 --Juraishin, the Cursed Thunder God
+88170262 1 --Kewl Tune Remix
 93039339 1 --Super Starslayer TY-PHON - Sky Crisis
 47710198 1 --Swordsoul Sinister Sovereign - Qixing Longyuan
 73121813 1 --Tenyi Spirit - Mula Adhara
+18973184 1 --Branded Lost
 59750328 1 --Card of Demise
+63136489 1 --Chimera Fusion
 53129443 1 --Dark Hole
+39568067 1 --Fateful Adventure
 19613556 1 --Heavy Storm
 73714736 1 --Flame Swordsrealm
 34773082 1 --Frightfur Patchwork
 42703248 1 --Giant Trunade
 6153210 1 --Ketu Dracotail
+17228908 1 --Lost World
+86809440 1 --Mimighoul Dungeon
 37520316 1 --Mind Control
 49238328 1 --Pot of Extravagance
 49238329 1 --Pot of Extravagance
@@ -50,8 +59,6 @@
 40597694 1 --Scatter Fusion
 81756619 1 --Succumbing-Song Morganite
 48130397 1 --Super Polymerization
-18973184 1 --Branded Lost
-79791878 1 --Shining Sarcophagus
 97223101 1 --That's 10!
 19403423 1 --Time-Tearing Morganite
 35371948 1 --Trickstar Light Stage
@@ -77,7 +84,6 @@
 70825459 1 --Trap Tracks
 80101899 1 --Trap Trick
 #One-Point Trinity
-1225009 2 --Arianna the Labrynth Servant
 27134209 2 --Beargram, Shelled Emperor of the Forest Crown
 55878038 2 --Chaos Dragon Levianeer
 55878039 2 --Chaos Dragon Levianeer
@@ -87,7 +93,6 @@
 60145298 2 --Diabellze the White Witch
 82103466 2 --Divine Serpent Geh
 70155677 2 --Dreaming Nemleria
-54842941 2 --Enneacraft - Atori.MAR
 63542003 2 --Keldo the Sacred Protector
 59829423 2 --Lord of the Missing Barrows
 99937011 2 --Mudora the Sword Oracle
@@ -109,21 +114,20 @@
 67680512 2 --Unchained Soul of Rage
 92519087 2 --Virtual World Kyubi - Shenshen
 4031928 2 --Change of Heart
-63136489 2 --Chimera Fusion
 60682203 2 --Cold Wave
 31552317 2 --Crystron Inclusion
 58012707 2 --Giant Ballpark
+33017964 2 --Illusion Gate
 59160188 2 --Lair of Darkness
 14532163 2 --Lightning Storm
 14532164 2 --Lightning Storm
-17228908 2 --Lost World
-86809440 2 --Mimighoul Dungeon
 55144522 2 --Pot of Greed
 84211599 2 --Pot of Prosperity
 92501449 2 --Primite Roar
 12580477 2 --Raigeki
 12580478 2 --Raigeki
 30336082 2 --Sangen Summoning
+98338152 2 --Sky Striker Mecha - Widow Anchor
 54936778 2 --Dark Contract with the Different Dimension
 85442146 2 --Dragon's Mind
 28903523 2 --Eternal Sunshine
@@ -139,6 +143,7 @@
 62962631 0 --Aluber the Jester of Despia
 82791472 0 --Ancient Warriors - Rebellious Lu Feng
 23846921 0 --Arcana Force XXI - The World
+53008933 0 --Archfiend's Advent
 75730490 0 --Ariane the Labrynth Servant
 27184601 0 --Artmage Diactorus
 34541940 0 --Artmage Finmel
@@ -149,6 +154,7 @@
 33854624 0 --Bystial Magnamhut
 15005145 0 --Centur-Ion Primera
 29251488 0 --Chef de Nouvelles
+44839512 0 --Conduction Warrior Linear Magnum Plus Minus
 99471856 0 --Crystron Tristaros
 51993760 0 --Dark Spirit of Banishment
 97417863 0 --D/D/D/D Super-Dimensional Sovereign Emperor Zero Paradox
@@ -174,18 +180,21 @@
 55623480 0 --Fairy Tail - Snow
 68468459 0 --Fallen of Albaz
 68468460 0 --Fallen of Albaz
+73819701 0 --Fallen of the White Dragon
 54334420 0 --Floowandereeze & Eglen
 62968263 0 --Galaxy-Eyes Afterglow Dragon
 19316241 0 --Galaxy War Drake
 2333466 0 --Gandora-G the Dragon of Destruction
 88225269 0 --Gem-Knight Hollowcore
 71197066 0 --Gizmek Orochi, the Serpentron Sky Slasher
+59369430 0 --Golgoil the Steel Seismic Smasher
 18377261 0 --Ha-Re the Sword Mikanko
 68144894 0 --Hecahands Godos
 1980574 0 --Hop Ear Squadron
 6327734 0 --Hu-Li the Jewel Mikanko
 6327735 0 --Hu-Li the Jewel Mikanko
 56347375 0 --Ignis Phoenix, the Dracoslayer
+42198835 0 --Illegal Knight
 22091647 0 --Immortal Phoenix Gearfried
 58346901 0 --Infernoble Knight Oliver
 53404966 0 --Infernoble Knight Ricciardetto
@@ -234,6 +243,7 @@
 66431519 0 --Sacred Fire King Garunix
 18294799 0 --Schwarzschild Infinity Dragon
 73421698 0 --Shif, Fairy of the Ghoti
+12197223 0 --Shiina, Twin Tempests of Celestial Thunder
 65726770 0 --Silent Magician Zero
 98385955 0 --Silvy of the White Forest
 48452496 0 --Snake-Eyes Flamberge Dragon
@@ -249,6 +259,7 @@
 74078255 0 --Tearlaments Merrli
 572850 0 --Tearlaments Scheiren
 52854600 0 --Tenyi Spirit - Suruya
+47027714 0 --T.G. Halberd Cannon/Assault Mode
 10604644 0 --Therion "King" Regulus
 18940556 0 --Ultimate Conductor Tyranno
 41165831 0 --Unchained Soul of Sharvara
@@ -259,6 +270,7 @@
 31772684 0 --Vendread Revenants
 27780618 0 --Vision HERO Vyon
 46412900 0 --Volcanic Emperor
+2563463 0 --Wandering Gryphon Rider
 21522601 0 --Witchcrafter Madame Verre
 4779091 0 --Yubel - Terror Incarnate
 87602890 0 --Zaborg the Mega Monarch
@@ -281,9 +293,11 @@
 8841431 0 --Centur-Ion Primera Primus
 22850702 0 --Chaos Angel
 4965193 0 --Chasma, Dragon Ruler of Auroras
+23204029 0 --Contrast HERO Chaos
 67098897 0 --Cooky★Yummy Way
 50588353 0 --Crystron Halqifibrax
 37542782 0 --Cyberdark End Dragon
+10136446 0 --Darklord Eveningstar
 61245672 0 --Decode Talker Heatsoul
 60461804 0 --Destiny HERO - Destroyer Phoenix Enforcer
 46593546 0 --D/D/D Deviser King Deus Machinex
@@ -295,18 +309,22 @@
 5041348 0 --Draco Berserker of the Tenyi
 33760966 0 --Dracotail Arthalion
 12381100 0 --Dragon Master Magia
+78397661 0 --Ecclesia and the Dark Dragon
 94977269 0 --El Shaddoll Winda
 94977270 0 --El Shaddoll Winda
 56733747 0 --Elemental HERO Shining Neos Wingman
+19222426 0 --Elemental HERO Thunder Giant - Voltic Thunder
 46186135 0 --Enlightenment Dragon
 86282581 0 --Evil HERO Darkest Knight
 86165817 0 --Evil HERO Malicious Bane
 13708888 0 --Evil HERO Neos Lord
+77675029 0 --Exosister Karmael
 83827392 0 --Expurrely Noir
 82135803 0 --Fiendsmith's Desirae
 2463794 0 --Fiendsmith's Requiem
 11464648 0 --Fiendsmith's Rextremende
 83793721 0 --Flowering Etoile the Melodious Magnificat
+21861412 0 --Flux Ochsenfeld
 77693536 0 --Fullmetalfoes Alkahest
 48835607 0 --Galatea-I, the Orcust Automaton
 30741503 0 --Galatea, the Orcust Automaton
@@ -315,9 +333,9 @@
 38229962 0 --Giant Beetrooper Invincible Atlas
 11132674 0 --Gigantic "Champion" Sargas
 49161188 0 --Gilti-Gearfried the Magical Steel Knight
+82706696 0 --GMX - VELOX
 34001672 0 --Goblin Biker Big Gabonga
 28497830 0 --Gold Pride - Pin Baller
-59369430 0 --Golgoil the Steel Seismic Smasher
 11516241 0 --Gouki The Powerload Ogre
 24915933 0 --Granguignol the Dusk Dragon
 84521924 0 --GranSolfachord Coolia
@@ -382,6 +400,7 @@
 74659582 0 --Sleipnir the Runick Mane
 79415624 0 --Snake-Eyes Vengeance Dragon
 29301450 0 --S:P Little Knight
+29301451 0 --S:P Little Knight
 27381364 0 --Spright Elf
 43387895 0 --Supreme King Dragon Starving Venom
 13331639 0 --Supreme King Z-ARC
@@ -418,7 +437,6 @@
 44763025 0 --Delinquent Duo
 35569555 0 --Dogmatikamatrix
 44133040 0 --Evil Eye of Selene
-39568067 0 --Fateful Adventure
 5063379 0 --Flavian - Colosseum of the Gladiator Beasts
 39730727 0 --Flawless Perfection of the Tenyi
 38053381 0 --Generaider Boss Stage
@@ -441,6 +459,7 @@
 25807544 0 --Noble Arms Museum
 95545183 0 --Ninjitsu Art Notebook of Mystery
 74191942 0 --Painful Choice
+82460246 0 --Peaceful Planet Calarium
 29095457 0 --Primite Drillbeam
 56506740 0 --Primite Lordly Lode
 49370016 0 --P.U.N.K. JAM Extreme Session
@@ -454,7 +473,6 @@
 6798031 0 --Ryzeal Cross
 44394295 0 --Shaddoll Fusion
 16240772 0 --Sinful Spoils of Doom - Rciela
-98338152 0 --Sky Striker Mecha - Widow Anchor
 63166095 0 --Sky Striker Mobilize - Engage!
 63166096 0 --Sky Striker Mobilize - Engage!
 63789924 0 --Smoke Grenade of the Thief
@@ -477,6 +495,7 @@
 85888377 0 --Apophis the Swamp Deity
 5168381 0 --Archfiend's Ghastly Glitch
 38379052 0 --Argostars - Slayer Eteo
+86762958 0 --Assist★Yummy!
 6763530 0 --Branded Banishment
 32756828 0 --Branded Beast
 53829527 0 --Crystron Cluster
@@ -484,10 +503,10 @@
 9765723 0 --Dark Contract with the Witch
 83326048 0 --Dimensional Barrier
 82956214 0 --Dogmatika Punishment
-80320877 0 --DoomZ Destruction
 5431722 0 --Dracotail Flame
 69932023 0 --Dracotail Horn
 57416183 0 --Dragonmaid Tidying
+24092792 0 --Elfnotes: Rhapsodia of Madness
 82162616 0 --Eternal Galaxy
 15693423 0 --Evenly Matched
 74100225 0 --Evo-Singularity
@@ -497,6 +516,7 @@
 99989863 0 --Fiendsmith in Paradise
 91152455 0 --Flame Coating Metalmorph
 39733924 0 --Full-Armored Xyz
+59374259 0 --Furtive Techniques Fur Hire, Fur All Your Ultimate Moves
 65898344 0 --Ghoti Fury
 87639778 0 --Harpie's Feather Storm
 92266279 0 --Humid Winds
@@ -510,6 +530,8 @@
 17954937 0 --Mitsurugi Great Purification
 57831349 0 --Nine Pillars of Yang Zing
 25542642 0 --Phantom Knights' Fog Blade
+53813120 0 --Radiant Typhoon Mandate
+89824842 0 --Ragnaraika Hunting Dance
 40551410 0 --Recette de Personnel (Staff Recipe)
 5376159 0 --Red Reign
 18634367 0 --Red Screen
@@ -591,6 +613,7 @@
 77585513 0 --Jinzo
 77585514 0 --Jinzo
 41855169 0 --Jowgen the Spiritualist
+23219323 0 --Junk Warrior/Assault Mode
 83986578 0 --King Tiger Wanghu
 12435193 0 --Koa'ki Meiru Drago
 55423549 0 --Leo Wizard the Dark Fiend
@@ -636,11 +659,13 @@
 51788412 0 --Chaos Ancient Gear Giant
 82315403 0 --Cyber Eternity Dragon
 75326861 0 --Dark Highlander
+41721210 0 --Dark Magician the Dragon Knight
 92798873 0 --Dinomorphia Rexterm
 19261966 0 --El Shaddoll Anoyatyllis
 91279700 0 --Evilswarm Ophion
 24882256 0 --Fire Phoenix @Ignister
 53466722 0 --First of the Dragonlords
+10817524 0 --First of the Dragons
 42632209 0 --Geomathmech Final Sigma
 47946130 0 --Gouki The Giant Ogre
 44665365 0 --Herald of Perfection
@@ -657,6 +682,7 @@
 33198837 0 --Naturia Beast
 99916754 0 --Naturia Exterio
 87054946 0 --Nephthys, the Sacred Flame
+35772782 0 --Number 67: Pair-a-Dice Smasher
 49032236 0 --Number 81: Superdreadnought Rail Cannon Super Dora
 63504681 0 --Number 86: Heroic Champion - Rhongomyniad
 26973555 0 --Number F0: Utopic Draco Future
@@ -690,6 +716,7 @@
 81674782 0 --Dimensional Fissure
 84171830 0 --Domain of the True Monarchs
 60514625 0 --Ecole de Zone
+17621695 0 --Enneapolis
 95308449 0 --Final Countdown
 87902575 0 --Future Visions
 70000776 0 --Hidden Temples of Necrovalley
@@ -718,6 +745,7 @@
 8628798 0 --D.D. Dynamite
 35027493 0 --Deck Devastation Virus
 46480475 0 --Discord
+80320877 0 --DoomZ Destruction
 16278116 0 --Dragon's Bind
 54974237 0 --Eradicator Epidemic Virus
 4931121 0 --Full Force Virus
@@ -884,13 +912,16 @@
 9744376 3 --Good Goblin Housekeeping
 2130625 3 --Numinous Healer
 8608979 3 --Super Team Buddy Force Unite!
+85698115 3 --Terrors of the Afterroot
 76812113 3 --Harpie Lady
 80316585 3 --Cyber Harpie Lady
 91932350 3 --Harpie Lady 1
 27927359 3 --Harpie Lady 2
 54415063 3 --Harpie Lady 3
+82616239 3 --Light Water Dragon
 17955766 3 --Neo-Spacian Aqua Dolphin
 17732278 3 --Neo-Spacian Glow Moss
+85066822 3 --Water Dragon
 28306253 3 --Angry Burger
 30243636 3 --Hungry Burger
 78734254 3 --Neo-Spacian Marine Dolphin
@@ -1444,6 +1475,7 @@
 63545455 3 --Mech Mole Zombie
 64154377 3 --Embryonic Beast
 64271667 3 --Meteor Dragon
+64413994 3 --Stealth Angecradle
 64428736 3 --Alligator's Sword
 64501875 3 --Hibikime
 64511793 3 --Eyearmor
@@ -1452,7 +1484,7 @@
 65623423 3 --Gruesome Goo
 65957473 3 --Metal Armored Bug
 66073051 3 --Warrior of Zera
-66429798 3 --Pesanta the Troubadour Deity
+66429798 3 --Pesanta the Titan of Troubadours
 66516792 3 --Serpent Night Dragon
 66602787 3 --Saggi the Dark Clown
 66672569 3 --Dragon Zombie
