Upload MDCurrent.conf via Website

--- a/MDCurrent.conf
+++ b/MDCurrent.conf
@@ -1,5 +1,5 @@
-#[MD 05.02.2026]
-!MD 05.02.2026
+#[MD 01.03.2026]
+!MD 01.03.2026
 #Forbidden MD
 1041278 0 --Branded Expulsion
 1845204 0 --Instant Fusion
@@ -41,7 +41,6 @@
 42829885 0 --The Forceful Sentry
 43262273 0 --Appointer of the Red Lotus
 44763025 0 --Delinquent Duo
-45663742 0 --Snake-Eye Oak
 46411259 0 --Metamorphosis
 50588353 0 --Crystron Halqifibrax
 51858306 0 --Eclipse Wyvern
@@ -183,8 +182,7 @@
 8628798 2 --D.D. Dynamite
 9091064 2 --Vanquish Soul Jiaolong
 10966439 2 --Marshmao☆Yummy
-14532163 2 --Lightning Storm
-17947697 2 --Maiden of White
+13332685 2 --Ame no Habakiri no Mitsurugi
 23002292 2 --Red Reboot
 28297833 2 --Necroface
 28642461 2 --K9-66a Jokul
@@ -199,5 +197,4 @@
 67835547 2 --Runick Slumber
 68304193 2 --Kashtira Unicorn
 71278040 2 --Parallel eXceed
-80453041 2 --Phantom of Yubel
 94145021 2 --Droll & Lock Bird
